k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: online-ticketing-backend
  labels:
    app.kubernetes.io/name: online-ticketing-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: online-ticketing
spec:
  type: ExternalName
  externalName: prod.socratic-event.com
  ports:
    - name: https
      port: 443
      protocol: TCP
