k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: online-ticketing-web
  labels:
    app.kubernetes.io/name: online-ticketing-web
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: online-ticketing
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: online-ticketing-web
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
